cluster/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: budget-app
spec:
  type: ClusterIP
  selector:
    app: budget-web
  ports:
  - name: http
    port: 80
    targetPort: 3000
